--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -268,7 +268,7 @@
     .stream_sorter_toggle {
         margin-left: auto;
 
-        @media (max-width: $lg_max) {
+        @media (width < $lg_min) {
             margin-left: unset;
         }
     }
@@ -390,7 +390,7 @@
     }
 }
 
-@media (max-width: $md_max) {
+@media (width < $md_min) {
     /* Override Bootstrap's responsive grid to display input at full width */
     .input-append .stream-list-filter {
         /* Input width = 100% - 10px margin x2 - 6px padding x2 - 1px border x2. */
