--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -353,7 +353,7 @@ ul {
     }
 }
 
-@media (max-width: $md_max) {
+@media (width < $md_min) {
     .message-info-popover,
     .user-info-popover {
         display: flex !important;
@@ -402,7 +402,7 @@ ul {
             pointer-events: all;
         }
 
-        @media (max-width: $sm_max) {
+        @media (width < $sm_min) {
             .popover-inner {
                 width: 70%;
             }
