--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1761,7 +1761,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     margin: 20px;
 }
 
-@media (max-width: $lg_max) {
+@media (width < $lg_min) {
     .user-avatar-section,
     .realm-icon-section {
         float: none;
@@ -1784,7 +1784,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
 
 /* This value needs to match with the same in subscriptions.css, as
    we have some shared styles declared there */
-@media (max-width: $md_max) {
+@media (width < $md_min) {
     #settings_overlay_container {
         /* this variable allows JavaScript to detect this media query */
         --single-column: yes;
@@ -1829,7 +1829,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media (max-width: $sm_max) {
+@media (width < $sm_min) {
     #pw_strength {
         margin: auto;
     }
@@ -1862,7 +1862,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media (max-width: $ml_max) {
+@media (width < $ml_min) {
     #api_key_buttons,
     #download_zuliprc {
         flex-direction: column;
@@ -1870,7 +1870,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media only screen and (max-width: $lg_max) {
+@media only screen and (width < $lg_min) {
     /* Show bot-information-box at full width on small
        screen sizes. Not having this media query breaks the
        information box */
