smokescreen: Put the version into the supervisorctl command.
This makes it reload correctly if the version is changed.

--- a/puppet/zulip_ops/templates/supervisor/conf.d/smokescreen.conf.erb
+++ b/puppet/zulip_ops/templates/supervisor/conf.d/smokescreen.conf.erb
@@ -1,5 +1,5 @@
 [program:smokescreen]
-command=/usr/local/bin/smokescreen
+command=/usr/local/bin/smokescreen-<%= @version %>
 priority=15
 autostart=true
 autorestart=true
