Increase the opacitywhen we hover on the "filter users" in the right-sidebar.

--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -181,6 +181,11 @@
         font-size: 13px;
         opacity: 0.5;
         margin-right: 5px;
+
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
     }
 }
 
