--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -849,11 +849,16 @@ input[type="checkbox"] {
     margin: 0;
     padding: 0;
 
-    label {
+    label,
+    button.dropdown-toggle {
         text-transform: uppercase;
         font-weight: 600;
         color: hsl(0, 0%, 67%);
         margin-top: 5px;
+    }
+
+    button.dropdown-toggle {
+        text-transform: none;
     }
 
     .buttons {
