frontend: Fixed broken label tag and removed label expression.
Fixes the following issues:

- Rectifies broken label tag having a misleading 'for' attribute.
- Removed 'name' attribute from unlabelled span tag.
- Removed label expression from DropdownListWidget to built an,
  abstraction for control group only.

Fixes #17311.

--- a/static/templates/settings/dropdown_list_widget.hbs
+++ b/static/templates/settings/dropdown_list_widget.hbs
@@ -1,9 +1,5 @@
 <div class="input-group dropdown-list-widget" id="{{widget_name}}_widget">
-    <label for="{{widget_name}}" id="{{widget_name}}_label" class="inline-block">
-        {{ label }}
-    </label>
-    <span class="{{widget_name}}_setting dropup actual-dropdown-menu prop-element" id="id_{{widget_name}}"
-        name="{{widget_name}}" aria-labelledby="{{widget_name}}_label">
+    <span class="{{widget_name}}_setting dropup actual-dropdown-menu prop-element" id="id_{{widget_name}}" aria-labelledby="{{widget_name}}_label">
         <button class="button small rounded dropdown-toggle" data-toggle="dropdown">
             <span id="{{widget_name}}_name"></span>
             <i class="fa fa-pencil"></i>
