--- a/static/styles/night_mode.css
+++ b/static/styles/night_mode.css
@@ -462,6 +462,7 @@ on a dark background, and don't change the dark labels dark either. */
     thead,
     .drafts-container .drafts-header,
     .recent_topics_container .recent_topics_header,
+    .nav > li > a:focus,
     .nav > li > a:hover,
     .subscriptions-container .subscriptions-header,
     .grey-box,
