--- a/templates/zerver/app/right_sidebar.html
+++ b/templates/zerver/app/right_sidebar.html
@@ -2,8 +2,8 @@
     <div class="right-sidebar-items">
         <div id="user-list">
             <div id="userlist-header">
-                <h4 class='sidebar-title' id='userlist-title' data-toggle="tooltip" title="{{ _('Filter users') }}">{{ _('USERS') }}</h4>
-                <i id="user_filter_icon" class='fa fa-search' aria-hidden="true" aria-label="{{ _('Filter users') }}" data-toggle="tooltip" title="{{ _('Filter users') }} (w)"></i>
+                <h4 class='sidebar-title tippy-zulip-tooltip' id='userlist-title' data-tippy-content="{{ _('Filter users') }}">{{ _('USERS') }}</h4>
+                <i id="user_filter_icon" class='fa fa-search tippy-zulip-tooltip' aria-hidden="true" aria-label="{{ _('Filter users') }}" data-tippy-content="{{ _('Filter users') }} (w)"></i>
             </div>
             <div class="input-append notdisplayed" id="user_search_section">
                 <input class="user-list-filter home-page-input" type="text" autocomplete="off" placeholder="{{ _('Search people') }}" />
