--- a/static/templates/message_delete_popover.hbs
+++ b/static/templates/message_delete_popover.hbs
@@ -1,4 +1,4 @@
-<div class="popover new-style" style="margin-top:20px;margin-right:27px">
+<div class="popover new-style message-delete-popover">
     <div  class="modal-header" >
         <button type="button" class="close"  aria-label="Close"><span
                 aria-hidden="true">&times;</span></button>
