--- a/static/templates/message_delete_popover.hbs
+++ b/static/templates/message_delete_popover.hbs
@@ -1,6 +1,6 @@
 <div class="popover new-style message-delete-popover">
     <div  class="modal-header" >
-        <button type="button" class="close"  aria-label="Close"><span
+        <button type="button" class="close"  aria-label="{{t 'Close' }}"><span
                 aria-hidden="true">&times;</span></button>
         <h3>
             Delete message
