Improve delete message warning #16426

--- a/static/templates/message_delete_popover.hbs
+++ b/static/templates/message_delete_popover.hbs
@@ -1,7 +1,6 @@
 <div class="popover new-style message-delete-popover">
     <div  class="modal-header" >
-        <button type="button" class="close"  aria-label="{{t 'Close' }}"><span
-                aria-hidden="true">&times;</span></button>
+        <button type="button" class="close"  aria-label="{{t 'Close' }}"><span aria-hidden="true">&times;</span></button>
         <h3>
             Delete message
             <a href="/help/edit-or-delete-a-message#delete-a-message" target="_blank" rel="noopener noreferrer">
