Revert "stream-ui: Change view from 2-column to 1-column at width 992px."
This reverts commit 34ada1144833ea7a15848428fec2913c36880f80.

That commit traded a minor visual glitch for a major usability
regression at my most common browser width (960px).

Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1789,7 +1789,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
 
 /* This value needs to match with the same in subscriptions.css, as
    we have some shared styles declared there */
-@media (width < $lg_min) {
+@media (width < $md_min) {
     #settings_overlay_container {
         /* this variable allows JavaScript to detect this media query */
         --single-column: yes;
