--- a/static/templates/subscription.hbs
+++ b/static/templates/subscription.hbs
@@ -12,19 +12,19 @@
     <div class="sub-info-box">
         <div class="top-bar">
             <div class="stream-name">{{name}}</div>
-            <div class="subscriber-count" data-toggle="tooltip" title="{{t 'Subscriber count' }}">
+            <div class="subscriber-count tippy-zulip-tooltip" data-tippy-content="{{t 'Subscriber count' }}">
                 {{> subscription_count}}
             </div>
         </div>
         <div class="bottom-bar">
             <div class="description rendered_markdown" data-no-description="{{t 'No description.'}}">{{rendered_markdown rendered_description}}</div>
             {{#if is_old_stream}}
-            <div class="stream-message-count" data-toggle="tooltip" title="{{t 'Estimated messages per week' }}">
+            <div class="stream-message-count tippy-zulip-tooltip" data-tippy-content="{{t 'Estimated messages per week' }}">
                 <i class="fa fa-bar-chart"></i>
                 <span class="stream-message-count-text">{{stream_weekly_traffic}}</span>
             </div>
             {{else}}
-            <div class="stream-message-count" data-toggle="tooltip" title="{{t 'Stream created recently' }}">
+            <div class="stream-message-count tippy-zulip-tooltip" data-tippy-content="{{t 'Stream created recently' }}">
                 <span class="stream-message-count-text">{{t "New" }}</span>
             </div>
             {{/if}}
