--- a/static/templates/stream_types.hbs
+++ b/static/templates/stream_types.hbs
@@ -32,7 +32,7 @@
     <li>
         <div class="input-group inline-block">
             <label for="stream_message_retention_setting" class="dropdown-title">{{t "Message retention period" }}
-                <i class="fa fa-info-circle settings-info-icon realm_allow_message_deleting_tooltip" data-toggle="tooltip" aria-hidden="true" title="{{t 'Only owners can change stream message retention policy.' }}"></i>
+                <i class="fa fa-info-circle settings-info-icon realm_allow_message_deleting_tooltip tippy-zulip-tooltip" aria-hidden="true" data-tippy-content="{{t 'Only owners can change stream message retention policy.' }}"></i>
             </label>
             <select name="stream_message_retention_setting"
               class="stream_message_retention_setting" class="prop-element"
