--- a/static/templates/message_view_header.hbs
+++ b/static/templates/message_view_header.hbs
@@ -2,7 +2,7 @@
 <a class="stream" href="{{stream_settings_link}}">
     {{> navbar_icon_and_title }}
 </a>
-<a class="sub_count no-style" data-toggle="tooltip" title="{{sub_count_tooltip_text}}" href="{{stream_settings_link}}">
+<a class="sub_count no-style tippy-zulip-tooltip" data-tippy-content="{{sub_count_tooltip_text}}" href="{{stream_settings_link}}">
     <i class="fa fa-user-o"></i>{{formatted_sub_count}}
 </a>
 <span class="narrow_description rendered_markdown" data-toggle="tooltip">
