frontend: add padding to usernames in private messages on left-sidebar.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -40,6 +40,7 @@ $topic_indent: calc($far_left_gutter_size + $left_col_size + 4px);
 
 .pm_left_col {
     min-width: $left_col_size;
+    padding-left: 15px;
 }
 
 #stream_filters,
